# All-Hands

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  TRACK-2-QA-PROGRESS.md  TRACK-2-QA-READY.md  TRACK-3-STOCK-ASSISTANT-DONE.md  TRACK-A-DONE.md  TRACK-E-DONE.md  TRACK-E-FOLLOWUP.md  TRACK-F-DONE.md  TRACK-F-FOLLOWUP.md  TRACK-M-DONE.md  TRACK-M-PROGRESS.md  docker-compose.yml
backend/: .gitignore  .importlinter  Dockerfile  alembic.ini  data  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_llm_providers.py  0003_add_llm_models.py  0004_extend_skills_for_install.py  0005_add_agent_plans.py  0006_add_triggers_and_events.py  0007_add_artifacts.py  0008_extend_events_for_cockpit.py  0009_add_channels.py  0009_add_tasks.py  0010_add_market.py  0011_add_tasks.py  0012_add_observability_config.py  0013_add_provider_kind.py  0014_add_conversation_model_ref_override.py  0015_null_out_stale_employee_model_refs.py  0016_add_employee_lifecycle.py  0017_add_message_reasoning.py  0018_add_skill_runtimes.py  0019_sweep_orphan_llm_models.py  0020_add_conversation_events.py  0021_add_auto_title_enabled.py  0021_add_user_inputs.py  0021_artifacts_content_to_disk.py  0021_default_at_model_layer.py  0022_default_at_model_layer.py  0022_messages_interrupted.py  0023_default_at_model_layer.py  0024_add_knowledge_base.py  0024_artifact_v2_metadata.py  0025_drop_confirmations_tool_calls_fk.py  0026_add_knowledge_base.py  0027_drop_langfuse_columns.py  0027_model_token_caps.py  0028_model_token_caps.py  0029_replace_drawio_creator_skill_id.py  0030_model_prices_overlay.py  0031_local_workspaces.py  0032_attachments.py  0032_message_is_compacted.py  (+8 more)
backend/data/: skills-market.json
backend/data.worktree-backup/: app.db
backend/data.worktree-backup/artifacts/: allhands-v0-platform-introduction.pptx
backend/data.worktree-backup/seeds/: conversations.json  skills_mount.json
backend/data/seeds/: employees.json  events.json  mcp_servers.json  models.json  providers.json
backend/scripts/: e2e_plan_test.py  skill_context_budget.py
backend/tests/: conftest.py
(+1221 files in other folders)
