[project]
name = "allhands"
version = "0.0.1"
description = "One for All — open-source digital employee organization platform"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "allhands contributors" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.5",
    "langgraph>=0.2.45",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "langfuse>=2.54.0",
    "mcp>=1.1.0",
    "structlog>=24.4.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.1.3",
    "python-dotenv>=1.0.1",
    "apscheduler>=3.10.4",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "import-linter>=2.1",
    "httpx>=0.27.0",                # for TestClient
    "types-python-dateutil",
    "types-pyyaml>=6.0.12.20260408",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/allhands"]

# ---- Pytest ----
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers --strict-config"
pythonpath = ["src"]
markers = [
    "integration: requires external services (LangFuse, LLM API)",
    "slow: long-running tests",
]

# ---- Mypy ----
[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_decorators = true
explicit_package_bases = true
packages = ["allhands"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = [
    "langfuse.*",
    "mcp.*",
    "langchain.*",
    "langchain_openai.*",
    "langgraph.*",
    "apscheduler.*",
]
ignore_missing_imports = true

# ---- Coverage ----
[tool.coverage.run]
source = ["src/allhands"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70
